--- a/aframe.html
+++ b/aframe.html
@@ -24,5 +24,6 @@
            
         </a-scene>
         <script src="script.js"></script>
+        <script src="movement.js"></script>
     </body>
 </html>
